// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<Styled(styled.th)
  align="left"
/>
`;

exports[`should support the ascending direction 1`] = `
<table>
  <thead>
    <tr>
      <SortableHeadCell
        direction="asc"
      >
        <Styled(styled.th)
          align="left"
        >
          <StyledComponent
            align="left"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bwzfXH",
                  "isStatic": false,
                  "lastClassName": "faglPq",
                  "rules": Array [
                    "
    display: table-cell;
    padding: .65rem;

    font-size: .85rem;
    line-height: 1.25rem;
    font-weight: 600;
    color: #ADB3C6;
    overflow: hidden;
    text-overflow: ellipsis;
    text-transform: uppercase;
    white-space: nowrap;
    
    text-align: ",
                    [Function],
                    ";
",
                    "
    cursor: pointer;
",
                  ],
                },
                "defaultProps": Object {
                  "align": "left",
                },
                "displayName": "Styled(styled.th)",
                "foldedComponentIds": Array [
                  "sc-bdVaJa",
                ],
                "propTypes": Object {
                  "align": [Function],
                  "children": [Function],
                },
                "render": [Function],
                "styledComponentId": "sc-bwzfXH",
                "target": "th",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <th
              className="sc-bdVaJa sc-bwzfXH faglPq"
            >
              <SortableArrow
                direction="asc"
              >
                <ArrowDown>
                  <styled.svg
                    viewBox="0 0 8 10"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-htpNat",
                            "isStatic": true,
                            "lastClassName": "fxfxjB",
                            "rules": Array [
                              "
  width: 8px;
  height: 10px;
  position: relative;
  left: 5px;
  top: 1px;
",
                            ],
                          },
                          "displayName": "styled.svg",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-htpNat",
                          "target": "svg",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      viewBox="0 0 8 10"
                    >
                      <svg
                        className="sc-htpNat fxfxjB"
                        viewBox="0 0 8 10"
                      >
                        <path
                          d="M3 4v6h2V4h3L4 0 0 4z"
                          fill="#2D3240"
                        />
                      </svg>
                    </StyledComponent>
                  </styled.svg>
                </ArrowDown>
              </SortableArrow>
            </th>
          </StyledComponent>
        </Styled(styled.th)>
      </SortableHeadCell>
    </tr>
  </thead>
</table>
`;

exports[`should support the descending direction 1`] = `
<table>
  <thead>
    <tr>
      <SortableHeadCell
        direction="desc"
      >
        <Styled(styled.th)
          align="left"
        >
          <StyledComponent
            align="left"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bwzfXH",
                  "isStatic": false,
                  "lastClassName": "faglPq",
                  "rules": Array [
                    "
    display: table-cell;
    padding: .65rem;

    font-size: .85rem;
    line-height: 1.25rem;
    font-weight: 600;
    color: #ADB3C6;
    overflow: hidden;
    text-overflow: ellipsis;
    text-transform: uppercase;
    white-space: nowrap;
    
    text-align: ",
                    [Function],
                    ";
",
                    "
    cursor: pointer;
",
                  ],
                },
                "defaultProps": Object {
                  "align": "left",
                },
                "displayName": "Styled(styled.th)",
                "foldedComponentIds": Array [
                  "sc-bdVaJa",
                ],
                "propTypes": Object {
                  "align": [Function],
                  "children": [Function],
                },
                "render": [Function],
                "styledComponentId": "sc-bwzfXH",
                "target": "th",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <th
              className="sc-bdVaJa sc-bwzfXH faglPq"
            >
              <SortableArrow
                direction="desc"
              >
                <ArrowUp>
                  <styled.svg
                    viewBox="0 0 8 10"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-htpNat",
                            "isStatic": true,
                            "lastClassName": "fxfxjB",
                            "rules": Array [
                              "
  width: 8px;
  height: 10px;
  position: relative;
  left: 5px;
  top: 1px;
",
                            ],
                          },
                          "displayName": "styled.svg",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-htpNat",
                          "target": "svg",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      viewBox="0 0 8 10"
                    >
                      <svg
                        className="sc-htpNat fxfxjB"
                        viewBox="0 0 8 10"
                      >
                        <path
                          d="M5 6V0H3v6H0l4 4 4-4z"
                          fill="#2D3240"
                        />
                      </svg>
                    </StyledComponent>
                  </styled.svg>
                </ArrowUp>
              </SortableArrow>
            </th>
          </StyledComponent>
        </Styled(styled.th)>
      </SortableHeadCell>
    </tr>
  </thead>
</table>
`;
